@@ -10,7 +10,8 @@
   This option limits the number of items shown in the relationship table.
 * UI: Remove logo from the sidebar
 * UI: Fix alignment issue with string fields on show pages
-* Bug Fix: Fix an bug where `nil` in a string field would cause a 500 error.
+* Bug Fix: Fix a bug where `nil` in a string field would cause a 500 error.
+* Bug Fix: Stop supporting `has_one` fields, which crashed the `update` action
 
 New in 0.0.11:
 
